<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="108dp"
        android:onClick="abrir_activities"
        android:text="@string/btn_Agregar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="12dp"
        android:onClick="abrir_activities"
        android:text="@string/btn_Modificar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar" />

    <Button
        android:id="@+id/btn_consultas"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="19dp"
        android:onClick="abrir_activities"
        android:text="@string/btn_Consultar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="116dp"
        android:text="@string/btn_Salir"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="25dp"
        android:onClick="abrir_activities"
        android:text="@string/btn_Eliminar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agregar" />

</androidx.constraintlayout.widget.ConstraintLayout>