<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="113dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="176dp"
        android:layout_height="31dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="29dp"
        android:text="@string/lbl_usuario"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/lblNombre2"
        android:layout_width="209dp"
        android:layout_height="32dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="140dp"
        android:text="@string/lbl_contra"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="212dp"
        android:layout_height="44dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNombre" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNombre2" />

    <Button
        android:id="@+id/button"
        android:layout_width="141dp"
        android:layout_height="57dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="28dp"
        android:onClick="abrirMenu"
        android:text="@string/btn_ingresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>