<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/caja_name2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="26dp"
        android:text="@string/lbl_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_id2" />

    <Button
        android:id="@+id/btn_eliminar2"
        android:layout_width="206dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="13dp"
        android:onClick="borrar"
        android:text="@string/btn_Eliminar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_name2" />

    <EditText
        android:id="@+id/caja_id2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_id"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBajas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar2" />
</androidx.constraintlayout.widget.ConstraintLayout>